--- a/template-portfolio/package.json
+++ b/template-portfolio/package.json
@@ -13,6 +13,8 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "panicmode": "^0.2.4"
+    "panicmode": "^0.2.4",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   }
 }
